# soldev

./: .gitignore  package-lock.json
ai-task-tracker/: .env  .gitignore  Cargo.toml  DOCKER_SETUP.md  NEW_LAPTOP_SETUP.md  QUICKSTART.md  README.md  USER_GUIDE.md  docker-compose.yml  project_design.md  setup-docker.sh  test_frontend_login.sh  verify_flow.sh
ai-task-tracker/docs/: PROGRESS.md  REMAINING_WORK.md  implementation_plan.md  task.md
ai-task-tracker/frontend/: middleware.ts  package-lock.json  package.json
ai-task-tracker/frontend/app/: layout.tsx
ai-task-tracker/frontend/app/(auth)/: layout.tsx
ai-task-tracker/frontend/app/(dashboard)/: layout.tsx  page.tsx
ai-task-tracker/frontend/components/layout/: sidebar.tsx  user-nav.tsx
ai-task-tracker/frontend/context/: auth-context.tsx
ai-task-tracker/frontend/lib/: api.ts
ai-task-tracker/migrations/: 20250101000001_create_users.sql  20250101000002_create_teams.sql  20250101000003_create_team_members.sql  20250101000004_create_projects.sql  20250101000005_create_tasks.sql  20250101000006_create_subtasks.sql  20250101000007_create_email_logs.sql  20250121000002_create_task_history.sql  20250121000003_fix_task_history_timestamp.sql  20251121000001_add_parent_task_id.sql
ai-task-tracker/src/: config.rs  main.rs
ai-task-tracker/src/db/: mod.rs  project_repo.rs  subtask_repo.rs  task_history_repo.rs  task_repo.rs  team_repo.rs  user_repo.rs
ai-task-tracker/src/middleware/: auth.rs
ai-task-tracker/src/models/: email_log.rs  mod.rs  project.rs  subtask.rs  task.rs  task_history.rs  team.rs  user.rs
ai-task-tracker/src/routes/: auth.rs  mod.rs  projects.rs  subtasks.rs  task_history.rs  tasks.rs  teams.rs  users.rs
ai-task-tracker/src/utils/: jwt.rs  mod.rs
demo-litesvm/programs/demo-litesvm/: Cargo.toml
demo-litesvm/programs/demo-litesvm/src/: lib.rs
demo-litesvm/programs/demo-litesvm/tests/: create_account.rs  transfer_test.rs
token-vault/programs/token-vault/: Cargo.toml
token-vault/programs/token-vault/src/: events.rs  lib.rs
token-vault/programs/token-vault/tests/: litesvm.rs
(+140 files in other folders)
