[package]
name = "token-vault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build","anchor-spl/idl-build"]


[dependencies]
anchor-lang = {version="0.31.1",features=["init-if-needed"]}
anchor-spl = "0.31.1"

[dev-dependencies]
litesvm = "0.8.2"
litesvm-token = "0.8.2"
solana-program = "3.0.0"
solana-sdk = "3.0.0"

